# llm-computation

./: README.md  compute_model_params.py  pyproject.toml
data/: qwen.json
src/param_compute/: __init__.py  attention.py  ffn.py  moe.py  shared.py
tests/: test_attention.py  test_cli.py  test_compute.py  test_ffn.py  test_model_series.py  test_moe.py  test_shared.py
